# movie-tracker-fast-api

./: .envrc  .gitignore  default.nix  flake.nix  main.py  pyproject.toml
api/: api.py  application.py
api/entities/: movie.py
api/handlers/: demo.py
api/repository/movie/: abstractions.py  movies.py
api/responses/: detail.py
api/tests/repository/movie/: test_movie.py
