[tool.poetry]
name = "movies-tracker"
version = "0.1.0"
description = ""
authors = ["Bruno Claudino <bruarrais@gmail.com>"]
readme = "README.md"
packages = [{include = "movies_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
