[tool.poetry]
name = "movies-tracker"
version = "0.1.0"
description = ""
authors = ["Bruno Claudino <bruarrais@gmail.com>"]
readme = "README.md"
packages = [{include = "movies_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
