[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bruno Claudino <bruarrais@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.2.1"
pydantic = "^1.10.5"
motor = "^3.1.1"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "api.application:main"
